<resources>
    <string name="app_name">GraduationProjectClient</string>
    <string name="email">Email</string>
    <string name="user_name">Имя</string>
    <string name="user_second_name">Фамилия</string>
    <string name="user_last_name">Отчество</string>
    <string name="password">Password</string>
    <string name="signup">SignUp</string>
    <string name="login">LogIn</string>

    <!--  Validator  -->
    <string name="empty_pass">Поле "Пароль" не может быть пустым</string>
    <string name="empty_second_name">Поле "Фамилия" не может быть пустым</string>
    <string name="empty_name">Поле "Имя" не может быть пустым</string>
    <string name="empty_email">Поле "Email" не может быть пустым</string>
    <string name="password_length">Поле "Пароль" не может содержать меньше 6 символов</string>
    <string name="email_length">Поле "Email" не может содержать меньше 7 символов</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="create_suggestion">Создать предложение</string>
    <string name="suggestion_theme">Тема предложения:</string>
    <string name="suggestion">О чём вы хотите рассказать</string>
    <string name="suggestion_2">О чём хотят рассказать:</string>
    <string name="suggestion_3"><font size="36">О чём вы рассказали:</font></string>
    <string name="title">Предложения</string>
    <string name="title_user">Ваши предложения</string>

    <string name="accept">✓</string>
    <string name="accept_text">Принять</string>
    <string name="accept_text_user">✓ - Предложение принято</string>
    <string name="on_moderation">⭘</string>
    <string name="on_moderation_text">⭘ - На рассмотрении</string>
    <string name="canceled">✗</string>
    <string name="canceled_text">Отклонить</string>
    <string name="canceled_text_user">✗ - Предложение отклонено</string>

</resources>